--- a/package.json
+++ b/package.json
@@ -6,14 +6,35 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest --passWithNoTests",
+    "prettier:check": "prettier --check src",
+    "prettier:fix": "prettier --write src",
+    "eslint:check": "eslint --ext .ts,.js,.tsx,.jsx src",
+    "eslint:fix": "eslint --fix --ext .ts,.js,.tsx,.jsx src",
+    "lint": "pnpm run --parallel /^.*:check$/",
+    "lint-fix": "pnpm run /^.*:fix$/"
   },
   "dependencies": {
     "solid-js": "^1.8.7"
   },
   "devDependencies": {
-    "typescript": "^5.2.2",
-    "vite": "^5.0.8",
-    "vite-plugin-solid": "^2.8.0"
+    "@solidjs/testing-library": "^0.8.5",
+    "@testing-library/jest-dom": "^6.1.6",
+    "@typescript-eslint/eslint-plugin": "^6.17.0",
+    "@typescript-eslint/parser": "^6.17.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-standard-with-typescript": "^43.0.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.2",
+    "eslint-plugin-solid": "^0.13.1",
+    "jsdom": "^23.0.1",
+    "prettier": "^3.1.1",
+    "solid-devtools": "^0.29.2",
+    "typescript": "^5.3.3",
+    "vite": "^5.0.10",
+    "vite-plugin-solid": "^2.8.0",
+    "vitest": "^1.1.1"
   }
 }
