--- a/package.json
+++ b/package.json
@@ -15,14 +15,13 @@
     "lint": "pnpm run --parallel /^.*:check$/",
     "lint-fix": "pnpm run /^.*:fix$/"
   },
-  "dependencies": {
-    "solid-js": "^1.8.7"
-  },
   "devDependencies": {
     "@solidjs/testing-library": "^0.8.5",
     "@testing-library/jest-dom": "^6.1.6",
+    "@types/node": "^20.10.6",
     "@typescript-eslint/eslint-plugin": "^6.17.0",
     "@typescript-eslint/parser": "^6.17.0",
+    "babel-preset-solid": "^1.8.8",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard-with-typescript": "^43.0.0",
@@ -34,7 +33,14 @@
     "solid-devtools": "^0.29.2",
     "typescript": "^5.3.3",
     "vite": "^5.0.10",
+    "vite-plugin-babel": "^1.2.0",
     "vite-plugin-solid": "^2.8.0",
     "vitest": "^1.1.1"
+  },
+  "dependencies": {
+    "component-register": "^0.8.3",
+    "lit-html": "^3.1.0",
+    "solid-element": "^1.8.0",
+    "solid-js": "^1.8.8"
   }
 }
