--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "test": "vitest --passWithNoTests",
     "prettier:check": "prettier --check src",
     "prettier:fix": "prettier --write src",
-    "eslint:check": "eslint --ext .ts,.js,.tsx,.jsx src",
-    "eslint:fix": "eslint --fix --ext .ts,.js,.tsx,.jsx src",
+    "eslint:check": "eslint src",
+    "eslint:fix": "eslint --fix src",
     "lint": "pnpm run --parallel /^.*:check$/",
     "lint-fix": "pnpm run /^.*:fix$/"
   },
@@ -22,7 +22,7 @@
     "@typescript-eslint/eslint-plugin": "^7.5.0",
     "@typescript-eslint/parser": "^7.5.0",
     "babel-preset-solid": "^1.8.16",
-    "eslint": "^8.57.0",
+    "eslint": "^9.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard-with-typescript": "^43.0.1",
     "eslint-plugin-import": "^2.29.1",
