--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "test": "vitest --passWithNoTests",
     "prettier:check": "prettier --check src",
     "prettier:fix": "prettier --write src",
-    "eslint:check": "eslint src",
-    "eslint:fix": "eslint --fix src",
+    "eslint:check": "eslint",
+    "eslint:fix": "eslint --fix",
     "lint": "pnpm run --parallel /^.*:check$/",
     "lint-fix": "pnpm run /^.*:fix$/"
   },
