--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "vitest --passWithNoTests",
+    "test": "vitest run --passWithNoTests",
     "prettier:check": "prettier --check src",
     "prettier:fix": "prettier --write src",
     "eslint:check": "eslint",
