--- a/package.json
+++ b/package.json
@@ -8,29 +8,28 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "vitest run --passWithNoTests",
-    "prettier:check": "prettier --check src",
-    "prettier:fix": "prettier --write src",
-    "eslint:check": "eslint",
-    "eslint:fix": "eslint --fix",
-    "lint": "pnpm run --parallel /^.*:check$/",
-    "lint-fix": "pnpm run /^.*:fix$/"
+    "lint": "eslint 'src/**/*.{ts,tsx}'",
+    "lint-fix": "eslint --fix 'src/**/*.{ts,tsx}'"
   },
   "devDependencies": {
     "@solidjs/testing-library": "^0.8.9",
+    "@stylistic/eslint-plugin": "^2.7.2",
+    "@stylistic/eslint-plugin-js": "^2.7.2",
+    "@stylistic/eslint-plugin-jsx": "^2.7.2",
+    "@stylistic/eslint-plugin-plus": "^2.7.2",
+    "@stylistic/eslint-plugin-ts": "^2.7.2",
     "@testing-library/jest-dom": "^6.5.0",
     "@types/node": "^22.5.4",
-    "@typescript-eslint/eslint-plugin": "^8.4.0",
-    "@typescript-eslint/parser": "^8.4.0",
     "babel-preset-solid": "^1.8.22",
     "eslint": "^9.10.0",
-    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.30.0",
-    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-promise": "^7.1.0",
     "eslint-plugin-solid": "^0.14.3",
     "jsdom": "^25.0.0",
     "prettier": "^3.3.3",
     "solid-devtools": "^0.30.1",
     "typescript": "^5.5.4",
+    "typescript-eslint": "^8.4.0",
     "vite": "^5.4.3",
     "vite-plugin-babel": "^1.2.0",
     "vite-plugin-solid": "^2.10.2",
