--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "lint-fix": "eslint --fix 'src/**/*.{ts,tsx}'"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.18.0",
     "@solidjs/testing-library": "^0.8.10",
     "@stylistic/eslint-plugin": "^2.13.0",
     "@stylistic/eslint-plugin-js": "^2.13.0",
